package com.directi.training.isp.exercise_refactored;

public class Sensor {
    public void register(SensorDependant obj) {
        throw new UnsupportedOperationException("register");
    }

    private boolean isPersonClose() {
        throw new UnsupportedOperationException("isPersonClose");
    }
}
