package com.directi.training.isp.exercise_refactored;

public class Timer {
    public void register(long timeOut, Timed obj) {

    }
}
